tdf#160431 Inverts webp file image when inserted

regression from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Apr 16 20:33:10 2021 +0200
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: I3b2959c99a2e18c3972920f8ca86072566d54225
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166450
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit c503b6eef32055f75dc9cf761bd20eda4f161dd4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166434
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>